--- a/index.html
+++ b/index.html
@@ -9,13 +9,32 @@
 <body style="background: burlywood;">
    <h1 style="color: crimson; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"> <u>Pasta a la bolognesa</u>  </h1> 
     <h2 style="color: crimson;"> <b>Ingredientes</b> </h2>
-       <p><ul>
-           <li>Pasta</li>
-           <li>carne molida</li>
-           <li>queso</li>
-           <li>agua</li>
-           <li>guiso (si quieres)</li>
-       </ul></p>
+    <table border="1">
+        <tr>
+            <td>INGREDIENTES</td>
+            <TD>CANTIDAD</TD>
+        </tr>
+        <TR>
+            <TD>Pasta</TD>
+            <td>500 gr</td>
+        </TR>
+        <tr>
+            <td>Carne molida</td>
+            <td>300 gr</td>
+        </tr>
+        <TR>
+            <TD>Queso</TD>
+            <td>100 gr</td>
+        </TR>
+        <tr>
+            <td>agua</td>
+            <td>1 litro</td>
+        </tr>
+        <tr>
+            <td>Guiso</td>
+            <td>Al gusto</td>
+        </tr>
+    </table>
        <h2 style="color: crimson;">¿Como prepararla?</h2>
        <p>
         <ol>
