--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        body{
+            width: 600px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
-<body style="background: burlywood;">
+<body>
    <h1 style="color: crimson; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"> <u>Pasta a la bolognesa</u>  </h1> 
     <h2 style="color: crimson;"> <b>Ingredientes</b> </h2>
     <table border="1">
@@ -46,6 +53,6 @@
         </ol>       
        </p>
        <img src="https://static-sevilla.abc.es/media/gurmesevilla/2009/09/AdobeStock_278043990-Espaguetis-bolo%C3%B1esa.jpeg" width="490" alt="">
-   
+       <p><a href="https://www.youtube.com/watch?v=EHZ5XMl8bM4">𝖕𝖗𝖊𝖘𝖎𝖔𝖓𝖆 𝖆𝖖𝖚𝖎 𝖕𝖆𝖗𝖆 𝖛𝖊𝖗 𝖛𝖎𝖉𝖊𝖔 𝖉𝖊 𝖑𝖆 𝖕𝖗𝖊𝖕𝖆𝖗𝖆𝖈𝖎𝖔𝖓</a></p> 
 </body>
 </html>
