--- a/index.html
+++ b/index.html
@@ -1,58 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <style>
-        body{
-            width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-    </style>
-</head>
-<body>
-   <h1 style="color: crimson; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"> <u>Pasta a la bolognesa</u>  </h1> 
-    <h2 style="color: crimson;"> <b>Ingredientes</b> </h2>
-    <table border="1">
-        <tr>
-            <td>INGREDIENTES</td>
-            <TD>CANTIDAD</TD>
-        </tr>
-        <TR>
-            <TD>Pasta</TD>
-            <td>500 gr</td>
-        </TR>
-        <tr>
-            <td>Carne molida</td>
-            <td>300 gr</td>
-        </tr>
-        <TR>
-            <TD>Queso</TD>
-            <td>100 gr</td>
-        </TR>
-        <tr>
-            <td>agua</td>
-            <td>1 litro</td>
-        </tr>
-        <tr>
-            <td>Guiso</td>
-            <td>Al gusto</td>
-        </tr>
-    </table>
-       <h2 style="color: crimson;">¿Como prepararla?</h2>
-       <p>
-        <ol>
-            <li>tenemos que poner a hervir el agua</li>
-            <li>cuando el agua este hirviendo hechamos la pasta</li>
-            <li>despuyes de unos 15 minutos masomenos escurrimos la pasta</li>
-            <li>hechamos el guiso y lo revolvemos con la pasta</li>
-            <li>por ultimo hechamos la carne por encima y el queso.</li>
-        </ol>       
-       </p>
-       <img src="https://static-sevilla.abc.es/media/gurmesevilla/2009/09/AdobeStock_278043990-Espaguetis-bolo%C3%B1esa.jpeg" width="490" alt="">
-       <p><a href="https://www.youtube.com/watch?v=EHZ5XMl8bM4">𝖕𝖗𝖊𝖘𝖎𝖔𝖓𝖆 𝖆𝖖𝖚𝖎 𝖕𝖆𝖗𝖆 𝖛𝖊𝖗 𝖛𝖎𝖉𝖊𝖔 𝖉𝖊 𝖑𝖆 𝖕𝖗𝖊𝖕𝖆𝖗𝖆𝖈𝖎𝖔𝖓</a></p> 
-</body>
+<html>
+    <head>
+        <title>Diseño con frames 2</title>
+    </head>
+    <frameset cols="20%,80%">
+        <frame name="left" src="menu.html"/>
+        <frame name="right" src="presentación.html"/>
+    </frameset>
 </html>
